hphp/test/slow/compilation/1238.php.expectf
HipHop Fatal error: syntax error, unexpected T_STRING in %s/hphp/test/slow/compilation/1238.php on line 3
